# aerokit

./: .codecov_token  .coveragerc  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  BL.py  CHANGELOG.md  CompressibleFlow.py  README.md  README.rst  ShockWave.py  TBL.py  ThermoKerosen.py  ThermoRealGas.py  check_riem.py  degree.py  doxygen.conf  files_pvtu.py  hades.env  make_gallery.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: publish-master.yml  python-package.yml
Delete_this/: tests_rayleigh.py
aero/: CompressibleFlow.py  Fanno.py  Isentropic.py  IterativeSolve.py  MassFlow.py  ODE.py  Rayleigh.py  ShockWave.py  Supersonic.py
aerokit/: __init__.py
aerokit/aero/: BoundaryLayer.py  CompressibleFlow.py  Fanno.py  Isentropic.py  IterativeSolve.py  MassFlow.py  ODE.py  Propulsion.py  Rayleigh.py  ShockWave.py  Supersonic.py  ThermoKerosen.py  degree.py  model1D.py  nozzle.py  refstate.py  riemann.py  unsteady1D.py  unsteady_inflow.py
aerokit/aero/plot/: defaultstyle.py  isentropicpolar.py  shockpolar.py
aerokit/common/: _dev.py  _ode.py  defaultgas.py  dicovar.py  numspectral.py
aerokit/engine/: Cycle_Turbofan.py  gasgenerator.py  propu_be_double_corps.py  turbofan.py  turbojet.py
aerokit/instance/: nozzle.py  riemann.py  unsteady_inflow.py
aerokit/stability/: Euler.py  OrrSommerfeld.py  OrrSommerfeldt.py  __init__.py  _base.py
docs/: about.md  examples.md  index.md  requirements.txt  userguide.md
docs/examples/: aero.Isentropic.ipynb  aero.MassFlow.ipynb  aero.ShockWave.ipynb  common.numspectral.ipynb  instance.riemann.ipynb  stability.OrrSommerfeld.ipynb  tuyere_jds.ipynb
docs/userguide/: aero.Isentropic.md  aero.MassFlow.md  aero.ShockWave.md
examples/: achile.py  fanno-diag.py  massflow-diag.py  ramjet-working.py  rayleigh-diag.py  rayleigh-heating.py  shockwave-polar-p.py  shockwave-polar.py  turbofan.py
examples/aero/: validation_conicalshock.py  validation_prandtlmeyer.py  validation_sigma_convergence.py
examples/engine/: compare_engine.py
examples/movies/: example_x3d_export.py  render_blender.py  run_blender_batch
examples/stability/: OS.py  euler1d.py  shock.py
hades/: __init__.py
hades/aero/: CompressibleFlow.py  Isentropic.py  IterativeSolve.py  MassFlow.py  ODE.py  ShockWave.py  Supersonic.py  degree.py  model1D.py  nozzle.py  riemann.py  unsteady1D.py  unsteady_inflow.py
hades/aero/plot/: defaultstyle.py  shockpolar.py
hades/common/: defaultgas.py  dicovar.py  extendvar.py
hades/engine/: Cycle_Turbofan.py  gasgenerator.py  propu_be.py  propu_be_double_corps.py  turbofan.py  turbojet.py
hades/tests/: test_defaultgas.py
notebooks/: Cycle_Turbofan.ipynb  Minimum_length_nozzle.py  Nozzle-regimes-short.ipynb  Nozzle-regimes.ipynb  Riemann-GuideVane.ipynb  Riemann-GuideVane.py  Riemann-GuideVane.slides.html  Riemann-Shocktube.ipynb  Riemann.ipynb  Riemann.slides.html  Shock-00-polar.html  Shock-00-polar.ipynb  Shock-21-reflexion.ipynb  Shock-31-coflow.ipynb  Sigma-approximation.ipynb  Turbofan-design.ipynb  Turbofan-functions.ipynb  Turbofan_pyclass_design.ipynb  article-florian.ipynb  custom.css  unsteady_inflow.ipynb  unsteady_inflow_Florian.ipynb
notebooks/aero/: Animations-widget.ipynb  BE-insta-0.ipynb  Caract-01-expansion.ipynb  Caract-02-smooth wall.ipynb  Nozzle-regimes-short.ipynb  Nozzle-regimes.ipynb  Nozzle-widget.ipynb  Riemann-Shocktube.ipynb  Riemann.ipynb  Shock-21-reflexion-widget.ipynb  Shock-21-reflexion.ipynb  Shock-22-shock-expansion.ipynb  unsteady_inflow.ipynb
scripts/: clean-repo.sh
tests/: test_0_defaultgas.py  test_0_degree.py  test_0_numspectral.py  test_1_fanno.py  test_1_massflow.py  test_1_model1D.py  test_1_rayleigh.py  test_1_shockwave.py  test_1_stability.py  test_1_supersonic.py  test_1_unsteady1D.py  test_2_OS.py  test_2_StabEuler.py  test_2_backwardcompatibility.py  test_2_nozzle.py  test_2_riemann.py  test_backwardcompatibility.py  test_defaultgas.py  test_degree.py  test_fanno.py  test_massflowfunctions.py  test_nozzle.py  test_shockwave.py  test_shockwaves.py  test_supersonic.py
