[tool.poetry]
name = "aerokit"
version = "1.1.0"
description = "Python tools for basic fluid mechanics computations"
authors = ["j.gressier <jeremie.gressier@isae-supaero.fr>"]
repository = "https://github.com/jgressier/aerokit"
documentation = "https://aerokit.readthedocs.io/en/latest/"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules" ]
exclude = [ "notebooks", "gallery" ]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
scipy = "^1.5.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
jupyter=""
mkdocs-material = "^6.2.5"
mkdocs-jupyter = "^0.15"
#markdown-include = "^0.6.0"
mkdocs-include-markdown-plugin = ""
mkdocs-exclude = ""
mkdocstrings = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov -v"
testpaths = [
    "tests"
]
