[tool.poetry]
name = "aerokit"
version = "1.1.3"
description = "Python tools for basic fluid mechanics computations"
authors = ["j.gressier <jeremie.gressier@isae-supaero.fr>"]
repository = "https://github.com/jgressier/aerokit"
documentation = "https://aerokit.readthedocs.io/en/latest/"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules" ]
exclude = [ "notebooks", "gallery" ]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
scipy = "^1.5.4"
matplotlib = "^3.2"

[tool.poetry.dev-dependencies]
jupyter=""
pytest=""
pytest-cov=""
coverage=""
mkdocs-material = "^6.2.5"
mkdocs-jupyter = "^0.15"
#markdown-include = "^0.6.0"
mkdocs-include-markdown-plugin = ""
mkdocs-exclude = ""
mkdocstrings = ""

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov -v"
testpaths = [
    "tests"
]

[tool.black]
line-length = 110
skip-string-normalization = true

[tool.bumpver]
current_version = "v1.1.3"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{pep440_version}"']
"aerokit/__init__.py" = ['__version__ = "{pep440_version}"']

